sample/src/strategy_pattern/bad/BlueDuck.java
package strategy_pattern.bad;

public class BlueDuck extends Duck{

  @Override
  void display() {
    System.out.println("파란색");
  }
}
